--- a/analysis/norc/ui/mainwindow.ui
+++ b/analysis/norc/ui/mainwindow.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Hardware Counter Noise Inquisitor</string>
+   <string>NORC</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QHBoxLayout" name="horizontalLayout">
